# rust-bittorrent

./: Cargo.toml  README.md
resources/: archlinux-2020.06.01-x86_64.iso.torrent
src/: bencode.rs  client.rs  main.rs  torrent.rs
