[package]
name = "torrent"
version = "0.1.0"
authors = ["Gabriele Carrettoni <gabriele.carrettoni@moneyfarm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
nom = "6.0.0-alpha1"
byteorder = "1"