[package]
name = "torrent"
version = "0.1.0"
authors = ["Gabriele Carrettoni <gabriele.carrettoni@moneyfarm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
nom = "6.0.0-alpha1"
if_chain = "1"
sha-1 = "0"
hex-literal = "0"
indexmap = "1"
url = "2.1.1"
reqwest = { version = "0.10" }
tokio = { version = "0.2", features = ["full"] }
hex = "0"